submission: fixed rendering on firefox.

--- a/hepdata/modules/theme/static/scss/submission.scss
+++ b/hepdata/modules/theme/static/scss/submission.scss
@@ -5,7 +5,9 @@
   margin: 0 auto;
   margin-top: 13em;
   text-align: center;
-  overflow-x: hidden;
+  overflow-y: hidden;
+  min-height: 600px;
+
 }
 
 .progress-circle {
